--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Piotr Neumann - full stack developer - Java, Spring, Angular</title>
 	<meta name="description" content="Piotr Neumann - My key areas of expertise include Java, Spring Boot, Angular">
 	<meta name="keywords" content="Java, Spring Boot, Hibernate, Wroclaw, Developer, Software, Skill, CV, Angular, HTML, CSS, javascript">
-    <link href="Piotr Neumann - Developer/bootstrap.css" rel="stylesheet">
-    <link href="Piotr Neumann - Developer/font-awesome.css" rel="stylesheet">
-    <link href="Piotr Neumann - Developer/main.css" rel="stylesheet">
-	<link href="Piotr Neumann - Developer/overwrites.css" rel="stylesheet">
+    <link href="developer/bootstrap.css" rel="stylesheet">
+    <link href="developer/font-awesome.css" rel="stylesheet">
+    <link href="developer/main.css" rel="stylesheet">
+	<link href="developer/overwrites.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="/components/js/html5shiv.js"></script>
       <script src="/components/js/respond.min.js"></script>
@@ -23,7 +23,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="Piotr Neumann - Developer/avatar.jpg" alt="Piotr Neumann" class="">
+              <img src="developer/avatar.jpg" alt="Piotr Neumann" class="">
             </div>
             <div id="text-header">
               <h1><span class="cv-name">Piotr Neumann</span><br> Full stack developer - <span>Java, Spring, Angular</span></h1>
@@ -176,11 +176,11 @@
       </div>
     </div>
     <!-- JQUERY -->
-    <script src="Piotr Neumann - Developer/jquery.js"></script>
+    <script src="developer/jquery.js"></script>
     <!-- BOOTSTRAP -->
-    <script src="Piotr Neumann - Developer/bootstrap.js"></script>
+    <script src="developer/bootstrap.js"></script>
     <!-- SCRIPTS -->
-    <script src="Piotr Neumann - Developer/scripts.js"></script>
+    <script src="developer/scripts.js"></script>
 
 
 
