--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="developer/avatar.jpg" alt="Piotr Neumann" class="">
+              <img src="avatar.JPG" alt="Piotr Neumann" class="">
             </div>
             <div id="text-header">
               <h1><span class="cv-name">Piotr Neumann</span><br> Full stack developer - <span>Java, Spring, Angular</span></h1>
