--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="developer/font-awesome.css" rel="stylesheet">
     <link href="developer/main.css" rel="stylesheet">
 	<link href="developer/overwrites.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--[if lt IE 9]>
       <script src="/components/js/html5shiv.js"></script>
       <script src="/components/js/respond.min.js"></script>
