--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   </head>
   <body>
     <div class="container">
+<!--        <div>-->
+<!--            <h3 class="display-4">Link to html view:</h3>-->
+<!--            <p><a>https://piotrneumann.github.io/resume/</a></p>-->
+<!--        </div>-->
       <div class="row">
         <div class="col-xs-12">
           <div id="photo-header" class="text-center">
@@ -60,7 +64,7 @@
             core technology. I worked on client and API applications. The
             applications are used within Docker, utilising some of its
             interesting features such as Rest ,
-            JWT token security etc.
+            JWT token security etc. Composition, implementation, building, unit testing and e2e testing tools in the security context of Netguard product
         </div>
     </div>
 </div>
@@ -175,6 +179,17 @@
             <div class="hobby">Tennis</div>
           </div>
         </div>
+      </div>
+      <div class="row">
+          <div class="col-xs-12">
+              <a><i>I agree to the processing of personal data provided in this document for realising the
+                  recruitment process pursuant to the Personal Data Protection Act of 10 May 2018
+                  (Journal of Laws 2018, item 1000) and in agreement with Regulation (EU) 2016/679
+                  of the European Parliament and of the Council of 27 April 2016 on the protection
+                  of natural persons with regard to the processing of personal data and on the free
+                  movement of such data, and repealing Directive 95/46/EC (General Data Protection Regulation)
+              </i></a>
+          </div>
       </div>
     </div>
     <!-- JQUERY -->
