--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             core technology. I worked on client and API applications. The
             applications are used within Docker, utilising some of its
             interesting features such as Rest ,
-            JWT token security etc. Composition, implementation, building, unit testing and e2e testing tools in the security context of Netguard product
+            JWT token security etc. Composition, implementation, building, unit testing and e2e testing tools in the security context of Netguard product.
+            Working with CIS Benchmarks Securing Red Hat Enterprise Linux
+            An objective, consensus-driven security guideline for the Red Hat Enterprise Linux Operating Systems.
         </div>
     </div>
 </div>
