--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                             Working with CIS Benchmarks Securing Red Hat Enterprise Linux
                             An objective, consensus-driven security guideline for the Red Hat Enterprise Linux Operating
                             Systems.
+							<br><br>
+							During my work, I have demonstrated my problem-solving skills on several situation. I manage to split my time on support requests in products. I managed to solve some bugs and features in product, and problems which require out of the box ideas.
                         </div>
                     </div>
                 </div>
@@ -111,7 +113,7 @@
                 </div>
 
 
-                <div class="job clearfix">
+                <!-- <div class="job clearfix">
                     <div class="col-xs-3">
                         <div class="where">CCIG</div>
                         <div class="year">2016 - 2018</div>
@@ -122,7 +124,7 @@
                             Contact and work on the consumer helpline and service desk.
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
@@ -182,10 +184,10 @@
                 <div class="skills">
                     <div class="item-skills" data-percent="0.80" style="width: 361.6px;">Java, Spring Boot, Hibernate
                     </div>
-                    <div class="item-skills" data-percent="0.70" style="width: 316.4px;">Angular 6/8, Twitter
+                    <div class="item-skills" data-percent="0.70" style="width: 316.4px;">Angular 8/12, Twitter
                         Bootstrap
                     </div>
-                    <div class="item-skills" data-percent="0.70" style="width: 316.4px;">Typescript, Sass, JQuery</div>
+                    <div class="item-skills" data-percent="0.70" style="width: 316.4px;">Docker, Kubernetes</div>
                     <div class="item-skills" data-percent="0.50" style="width: 226px;">Python, OpenCV</div>
                     <div class="skills-legend clearfix">
                         <div class="legend-left legend">Beginner</div>
