--- a/index.html
+++ b/index.html
@@ -226,12 +226,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <a><i>I agree to the processing of personal data provided in this document for realising the
-                recruitment process pursuant to the Personal Data Protection Act of 10 May 2018
-                (Journal of Laws 2018, item 1000) and in agreement with Regulation (EU) 2016/679
-                of the European Parliament and of the Council of 27 April 2016 on the protection
-                of natural persons with regard to the processing of personal data and on the free
-                movement of such data, and repealing Directive 95/46/EC (General Data Protection Regulation)
+            <a><i>Wyrażam zgodę na przetwarzanie przez PGS Software sp. z o.o. z siedzibą we Wrocławiu przy ulicy Suchej 3 moich danych osobowych, zawartych w mojej ofercie pracy, dla potrzeb niezbędnych do realizacji procesu rekrutacji zgodnie z ustawą o ochronie danych osobowych z dnia 10 maja 2018 r. (tj. Dz. U. z 2018 r., poz. 1000).
             </i></a>
         </div>
     </div>
