--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="avatar.JPG" alt="Piotr Neumann" class="">
                 </div>
                 <div id="text-header">
-                    <h1><span class="cv-name">Piotr Neumann</span><br> Full stack developer - <span>Java, Spring, Angular</span>
+                    <h1><span class="cv-name">Piotr Neumann</span><br> Full stack developer - <span>Java/Kotlin, Spring, Angular</span>
                     </h1>
                 </div>
             </div>
@@ -46,19 +46,44 @@
             <div class="box">
                 <h2>Summary</h2>
                 <p>Full stack developer / work with system Linux, Microsoft specialising in technologies:
-                    <strong>Java</strong>, <strong>Spring Framework</strong>, and frontend technology support: <strong>Bootstrap</strong>/<strong>Angular</strong>.
+                    <strong>Java/Kotlin</strong>, <strong>Spring Framework</strong>, and frontend technology support:
+                    <strong>Angular</strong>.
                 </p>
-                <p>Startup enthusiast. Constantly looking for new challenges and I like learning.</p>
+                <p>Startup enthusiast. Constantly looking for new challenges and I like learning. I also delved into
+                    exploring AI and ML models. I've been proactive in learning about various machine learning
+                    algorithms and artificial intelligence techniques, </p>
             </div>
             <!-- EXPERIENCES -->
             <div class="box">
                 <h2>Work Experience</h2>
 
-
+                <div class="job clearfix">
+                    <div class="col-xs-3">
+                        <div class="where">Allegro</div>
+                        <div class="year">2023 - Now</div>
+                    </div>
+                    <div class="col-xs-9">
+                        <div class="profession">Software Engineer, remote &amp;
+                            onsite
+                        </div>
+                        <div class="description">
+                            During my actual position I had the opportunity to work with various technologies such as
+                            Kotlin Coroutines, MongoDB, and Kafka, employing a Domain-Driven Design (DDD) approach. My
+                            main responsibilities revolved around developing functionalities for microservices,
+                            deploying them, and monitoring their performance in a production environment serving the
+                            <b>daily user traffic of a thousand users</b>
+                            <br><br>
+                            In addition to the aforementioned technologies, I also worked with Google Cloud Platform
+                            (GCP) technology and Airflow for cloud-based data processing. This involved orchestrating
+                            and automating complex data workflows, further expanding my expertise in cloud computing and
+                            data management.
+                        </div>
+                    </div>
+                </div>
                 <div class="job clearfix">
                     <div class="col-xs-3">
                         <div class="where">Nokia</div>
-                        <div class="year">2020 - Now</div>
+                        <div class="year">2020 - 2023.06</div>
                     </div>
                     <div class="col-xs-9">
                         <div class="profession">Java SW Engineer, Security application, remote &amp;
@@ -76,8 +101,10 @@
                             Working with CIS Benchmarks Securing Red Hat Enterprise Linux
                             An objective, consensus-driven security guideline for the Red Hat Enterprise Linux Operating
                             Systems.
-							<br><br>
-							During my work, I have demonstrated my problem-solving skills on several situation. I manage to split my time on support requests in products. I managed to solve some bugs and features in product, and problems which require out of the box ideas.
+                            <br><br>
+                            During my work, I have demonstrated my problem-solving skills on several situation. I manage
+                            to split my time on support requests in products. I managed to solve some bugs and features
+                            in product, and problems which require out of the box ideas.
                         </div>
                     </div>
                 </div>
@@ -182,7 +209,8 @@
             <div class="box">
                 <h2>Key skills and expertise</h2>
                 <div class="skills">
-                    <div class="item-skills" data-percent="0.80" style="width: 361.6px;">Java, Spring Boot, Hibernate
+                    <div class="item-skills" data-percent="0.80" style="width: 361.6px;">Java/Kotlin, Spring Boot,
+                        Hibernate, MongoDb
                     </div>
                     <div class="item-skills" data-percent="0.70" style="width: 316.4px;">Angular 8/12, Twitter
                         Bootstrap
@@ -226,7 +254,10 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <a><i>Wyrażam zgodę na przetwarzanie przez PGS Software sp. z o.o. z siedzibą we Wrocławiu przy ulicy Suchej 3 moich danych osobowych, zawartych w mojej ofercie pracy, dla potrzeb niezbędnych do realizacji procesu rekrutacji zgodnie z ustawą o ochronie danych osobowych z dnia 10 maja 2018 r. (tj. Dz. U. z 2018 r., poz. 1000).
+            <a><i>Wyrażam zgodę na przetwarzanie przez PGS Software sp. z o.o. z siedzibą we Wrocławiu przy ulicy Suchej
+                3 moich danych osobowych, zawartych w mojej ofercie pracy, dla potrzeb niezbędnych do realizacji procesu
+                rekrutacji zgodnie z ustawą o ochronie danych osobowych z dnia 10 maja 2018 r. (tj. Dz. U. z 2018 r.,
+                poz. 1000).
             </i></a>
         </div>
     </div>
