--- a/index.html
+++ b/index.html
@@ -254,11 +254,10 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <a><i>Wyrażam zgodę na przetwarzanie przez PGS Software sp. z o.o. z siedzibą we Wrocławiu przy ulicy Suchej
-                3 moich danych osobowych, zawartych w mojej ofercie pracy, dla potrzeb niezbędnych do realizacji procesu
-                rekrutacji zgodnie z ustawą o ochronie danych osobowych z dnia 10 maja 2018 r. (tj. Dz. U. z 2018 r.,
-                poz. 1000).
-            </i></a>
+            <a><i>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb rekrutacji (zgodnie z art. 6 ust. 1
+                lit. a Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie
+                ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu
+                takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych)).</i></a>
         </div>
     </div>
 </div>
